--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: python
 python:
-    - "3.4"
+- '3.4'
 cache:
   directories:
-    - $HOME/.pip-cache/
+  - "$HOME/.pip-cache/"
 install:
-    - sudo apt-get install libmemcached-dev
-    - pip install -r requirements.txt --download-cache $HOME/.pip-cache --use-mirrors
-    - pip install -r requirements-dev.txt --download-cache $HOME/.pip-cache --use-mirrors
+- sudo apt-get install libmemcached-dev
+- pip install -r requirements.txt --download-cache $HOME/.pip-cache --use-mirrors
+- pip install -r requirements-dev.txt --download-cache $HOME/.pip-cache --use-mirrors
 script:
-    - cd peacecorps
-    - python manage.py test --settings=peacecorps.settings.test
+- cd peacecorps
+- python manage.py test --settings=peacecorps.settings.test
+notifications:
+  webhooks: http://project-monitor.cf.18f.us/projects/peacecorps-site/status
